<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="4dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">
    <!--
    android:background="@drawable/row_highlight_color" -->

    <TextView
        android:id="@+id/textView_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="30sp"
        android:text="@string/age"/>


    <TextView
        android:id="@+id/textView_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_age"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/birthdate"/>

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_birthdate"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/name"/>
</RelativeLayout>
